--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ Packages/com.vrchat.vrcsdk3
 # Proprietary assets
 [Aa]ssets/QvPen
 [Aa]ssets/QvPen.meta
+[Aa]ssets/HoshinoLabs
+[Aa]ssets/HoshinoLabs.meta
