--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,5 @@ Packages/com.vrchat.vrcsdk3
 [Aa]ssets/QvPen.meta
 [Aa]ssets/HoshinoLabs
 [Aa]ssets/HoshinoLabs.meta
+[Aa]ssets/UnaSlides
+[Aa]ssets/UnaSlides.meta
