Skyboxを追加し、設定

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@ Packages/com.vrchat.vrcsdk3
 [Aa]ssets/UnaSlides
 [Aa]ssets/UnaSlides.meta
 yt-dlp.exe
+[Aa]ssets/SkySeries Freebie
+[Aa]ssets/SkySeries Freebie.meta
